# Encmetric

./: .gitignore  README.md
src/: CMakeLists.txt  base64.cpp  detector.cpp  enc_c.cpp  enc_io.cpp  enc_strings.cpp  encmetric.hpp  encoding.cpp  iso8859_enc.cpp  linux_enc_io.cpp.in  linux_enc_io_core.cpp.in  utf16_enc.cpp  utf32_enc.cpp  utf8_enc.cpp  utfs.cpp  win_codepages.cpp  win_enc_io.cpp.in  win_enc_io_core.cpp.in
src/encmetric/: all_enc.hpp  ascii_extensions.hpp  base.hpp  base64.hpp  basic_ptr.hpp  byte_tools.hpp  chite.hpp  chite.tpp  config.hpp  config.hpp.in  enc_c.hpp  enc_io.hpp  enc_io_core.hpp  enc_string.hpp  enc_string.tpp  enc_strings.hpp  encoding.hpp  endianess.hpp  exceptions.hpp  iso8859_enc.hpp  tokens.hpp  utf16_enc.hpp  utf16_enc.tpp  utf16_enc_0.hpp  utf32_enc.hpp  utf32_enc.tpp  utf32_enc_0.hpp  utf8_enc.hpp  utf_string.hpp  utf_string.tpp  win_codepages.hpp
test/: a.out  main.cpp
